--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@ html {
   scroll-behavior: smooth;
 }
 
+#branding{
+	font-family: 'Galada', cursive;
+}
+
 #myname {
 	font-size: 80px;
-	text-align: right;
 	font-family: 'Galada', cursive;
 	padding-top: 100px;
 }
 
-#welcome {
-	background-image: url('./public/bg.jpg')
 
-}
 
 #aboutmename {
 	font-size: 70px;
@@ -32,10 +32,6 @@ html {
 	padding-top: 50px;
 }
 
-body {
-	background-image: url('https://cdn.pixabay.com/photo/2020/02/06/21/44/rose-4825575_960_720.jpg')
-	background-position: ;
-}
 
 #content{
 	font-family: 'Bree Serif', serif;
@@ -45,7 +41,12 @@ body {
 #tagline{
 	font-family: 'Bree Serif', serif;
 	font-size: 40px;
-	text-align: right;
+}
+
+#objectives{
+	font-family: 'Bree Serif', serif;
+	font-size: 20px;
+	margin: 10px 10px;
 }
 
 #ako{
@@ -81,4 +82,70 @@ img{
 #capsdescription {
 	font-family: 'Bree Serif', serif;
 	font-size:16px;
+}
+
+#contactmessage{
+	font-family: 'Bree Serif', serif;
+	font-size: 20px;
+}
+
+#allrights{
+	font-family: 'Galada', cursive;
+	font-color: white;
+	font-size: 12px;
+}
+
+
+iframe{
+	margin-bottom: 10vh;
+}
+#myprojects, #aboutmename{
+	margin-top: 5vh;
+}
+
+footer{
+	margin-top: 5px;
+
+
+.fab{
+	size: 7px;
+}
+
+body{
+	background-color: yellow;
+}
+
+#welcome, #aboutme, #projects, #contactme a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#welcome, #aboutme, #projects, #contactme a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#welcome, #aboutme, #projects, #contactme a:active {
+  background-color: white;
+  color: black;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.container:hover .overlay {
+  opacity: 1;
 }
